--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -9,7 +9,7 @@ import { highlightedCode as integrationTest } from '@/samples/features/integrati
 ---
 
 In the previous section, we talked about how to [unit-test individual resolvers](/docs/unit-tests)—this process is easy since each resolver is a callable Python functions and you can assert on the expected output. In this section we will talk about writing integration tests. Chalk provides two features that make integration testing really easy:
-- Branch deployment,
+- branch deployments,
 - The `check` method of the python Chalk client.
 
 With branch deploys, you can deploy and test your changes in an isolated environment before
