--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -12,7 +12,7 @@ In the previous section, we talked about how to [unit-test individual resolvers]
 - branch deployments,
 - the `check` method of the python Chalk client.
 
-With branch deploys, you can deploy and test your changes in an isolated environment before
+With branch deploys, you can test your changes in an isolated environment before
 shipping your code into production.
 
 With Chalk `check`, you can set up simple integration tests that assert on the expected outputs of your queries.
