--- a/unit-tests.mdx
+++ b/unit-tests.mdx
@@ -5,11 +5,11 @@ description: Unit tests for Chalk resolvers
 
 ---
 
-Chalk lets you specify your feature pipelines
-using idiomatic Python.
-You can unit test individual resolvers and
-combinations of resolvers as you would normal Python
+Chalk lets you specify your feature pipelines using idiomatic Python.
+You can unit test individual resolvers and combinations of resolvers as you would normal Python
 functions.
+
+Read more about how to write integration tests for resolvers [here](/docs/integration-tests).
 
 ---
 
