--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -8,7 +8,9 @@ import { highlightedCode as integrationTest } from '@/samples/features/integrati
 
 ---
 
-In the previous section, we talked about how to [unit-test individual resolvers](/docs/unit-tests)—this process is easy since each resolver is a callable Python functions and you can assert on the expected output. In this section we will talk about writing integration tests. Chalk provides two features that make integration testing really easy:
+A Chalk resolver is a callable Python function that you can [unit test](/docs/unit-tests) like any other Python function,
+making assertions on the expected output. Chalk also provides two features that make integration testing really easy.
+
 - branch deployments,
 - the `check` method of the python Chalk client.
 
@@ -40,7 +42,7 @@ the flag [`--branch <branch_name>`](/cli/apply).
 The [`--await`](/cli/apply#await) flag means that the deployment will
 be live by the time that the command returns.
 
-### Querying a branch deployment
+### Querying a branch deployment from CLI
 
 You can quickly check your branch deployment using
 [`chalk query --branch`](/cli/query) on the command line to
@@ -56,39 +58,48 @@ pull feature values:
 
 The flag [`--branch`](/cli/query) tells this query to target the branch set during `chalk apply`.
 
+### Querying a branch deployment using ChalkClient
+
+You can also target a branch from the
+[Chalk API client](/docs/query-basics).
+Using this client, you can write integration tests:
+
+<PyEditor html={integrationTest} filename={'integration_test.py'} />
+
 Branch deployments are a great way to quickly test whether the changes you have made to features
 or resolvers are behaving as expected when they are composed and executed in response to Chalk
 queries.
 
-However, if you want to write conrete integration tests, we recommend using the `check` method of
-the Chalk python client.
+However, if you want to write concrete integration tests, we recommend using the `check` method of
+the Chalk Python client.
 
 ---
 
-## Writing Integration Tests
+## Writing Integration Tests using ChalkClient.check()
 
 Suppose you have the following features defined in chalk:
 
 ```python
-from chalk.features import DataFrame, features, FeatureTime
+from chalk.features import DataFrame, features, FeatureTime, _
+from chalk.streams import Windowed, windowed
 
 @features
-def Transaction:
+class Transaction:
     id: int
     user_id: "User.id"
     amount: float
     ts: FeatureTime
 
 @features
-def User:
+class User:
     id: int
     transactions: DataFrame[Transaction]
     transaction_count: Windowed[int] =  windowed(
-        "1d", "3d"
+        "1d", "3d",
         expression=_.transactions[_.ts > _.chalk_window].count(),
     )
     transaction_mean: Windowed[float] =  windowed(
-        "1d", "3d"
+        "1d", "3d",
         expression=_.transactions[_.ts > _.chalk_window].mean(),
     )
 ```
@@ -103,7 +114,6 @@ from src.feature_sets import Transaction, User
 import datetime as dt
 import pytest
 
-client = ChalkClient()
 
 @pytest.fixture()
 def client():
@@ -111,8 +121,8 @@ def client():
     # return ChalkClient(branch=True) # Uses your current git branch
 
 
-def test_transaction_aggregations():
-    now = dt.now()
+def test_transaction_aggregations(client):
+    now = dt.datetime.now()
 
     result = client.check(
         input={
@@ -133,37 +143,42 @@ def test_transaction_aggregations():
             User.transaction_sum["3d"]: 60,
             User.transaction_sum["1d"]: 10,
             User.transaction_mean["1d"]: 10,
-            User.transaction_mean["3d"]: 21,    # oops, this is wrong
+            User.transaction_mean["3d"]: 21,   # This test will fail because this value is incorrect!
         }
     )
 ```
 
-if you run `pytest -s tests/test_transaction_aggregations.py`, you will get the following output:
+You can then run `pytest -s tests/test_transaction_aggregations.py`, where you will see a result like this:
 
-Note, since the user's transactions are explicitly passed—they will not be fetched from any online resolver
-you've defined to pull transactions (for example from a database).
+```bash
+
+Chalk Feature Value Mismatch
+┏━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━┓
+┃ Kind   ┃ Name                        ┃ Value     ┃
+┡━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━┩
+│ Expect │ user.transaction_mean__3d__ │    20     │
+│ Actual │ user.transaction_mean__3d__ │    21     │
+└────────┴─────────────────────────────┴───────────┘
+```
+
+Note that since the user's transactions are explicitly passed in as input, there is no need to run any resolvers
+that have been defined to compute the transactions for a user.
 
 ---
 
-## Writing Integration Tests
+## Integration Testing Using Tagged Resolvers
 
-Mocking Inputs Using Tagged Resolvers
-
----
-
-## Integration test
-
-You can also target a branch from the
-[Chalk API client](/docs/query-basics).
-Using this client, you can write integration tests:
-
-<PyEditor html={integrationTest} filename={'integration_test.py'} />
+In addition to the `check` method, you can also use tagged resolvers to test changes to resolvers.
+If you have a resolver that you want to update and then test, you could add [resolver tags](/docs/resolver-tags)
+to two versions of the resolver--one tagged "v1.0.0" and one tagged "v1.0.1", for example. Then, you
+can run two queries with the same input data but the different tags and compare the query outputs
+to ensure that the new resolver is working as expected.
 
 ---
 
 ## GitHub Action
 
-Chalk can be easily integrated in a
+You can also run integration tests as part of your CI/CD pipeline using the Chalk
 [GitHub Action](https://github.com/chalk-ai/cli-action).
 You will need to create a Chalk token from the settings
 page of your dashboard and store the resulting client
