--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -3,7 +3,7 @@ title: Snapshot Tests
 description: Snapshot testing with Chalk
 ---
 
-Snapshot testing is a really effective way of ensuring that your features are not dramatically changing
+Snapshot testing is an effective way of ensuring that your features are not dramatically changing
 between deployments. You can set up snashot testing in Chalk by leveraging Chalk [Datasets].
 
 Typically, snapshot testing will be part of a CI (continuous integration) workflow. Pull requests will automatically
