--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -17,7 +17,7 @@ To set up snapshot testing, we'll write a couple pytest fixtures and a test. The
 snaphot data and create a new snapshot based on your current code. The test will then compare the distributions of
 the features in your old and new datasets.
 
-In this example we'll be testing that snapshot testing the features on the following feature class:
+In this example we'll be snapshot testing the features on the following feature class:
 
 ```python
 from chalk.features import features
