--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -31,7 +31,7 @@ class User:
     age: float
 ```
 
-In this example, lets say we resolve the `full_name` and birthday of our User's from from a postgres database. The age, we calculate using an online resolver:
+In this example, we resolve the `full_name` and birthday of our User's from from a Postgres database. The age, we calculate using an online resolver:
 ```python
 from chalk import online
 from chalk.features import Now
