--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -4,7 +4,7 @@ description: Snapshot testing with Chalk
 ---
 
 Snapshot testing is an effective way of ensuring that your features are not dramatically changing
-between deployments. You can set up snashot testing in Chalk by leveraging Chalk [Datasets](/docs/datasets).
+between deployments. You can set up snashot testing in Chalk by leveraging [Datasets](/docs/datasets).
 
 Typically, snapshot testing will be part of a CI (continuous integration) workflow. Pull requests will automatically
 trigger tests which verify that code changes have not caused feature distributions shifts.
