--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -9,7 +9,7 @@ between deployments. You can set up snashot testing in Chalk by leveraging [Data
 Typically, snapshot testing will be part of a CI (continuous integration) workflow. Pull requests will automatically
 trigger tests which verify that code changes have not caused feature distributions shifts.
 
-In this section, we'll demonstrate the process of writing snashot tests using pytest and Github Actions.
+In this section, we'll walk through the process of creating snapshot tests using pytest and Github Actions.
 
 ## Overview
 
