--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -7,7 +7,7 @@ Snapshot testing is an effective way of ensuring that your features are not dram
 between deployments. You can set up snapshot testing in Chalk by leveraging [Datasets](/docs/datasets).
 
 Typically, snapshot testing will be part of a CI (continuous integration) workflow. Pull requests will automatically
-trigger tests which verify that code changes have not caused feature distributions shifts.
+trigger tests which verify that code changes have not caused feature distribution shifts.
 
 In this section, we'll walk through the process of creating snapshot tests using Pytest and GitHub Actions.
 
