--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -28,7 +28,7 @@ class User:
     id: int
     full_name: name
     birthday: dt.datetime
-    age: float
+    age: int
 ```
 
 In this example, we resolve the `full_name` and birthday of our User's from a Postgres database. The age feature is calculated using an online resolver:
