--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -37,14 +37,14 @@ from chalk import online
 from chalk.features import Now
 
 @online
-def birthday_resolver(bday: User.birthday, now: Now) -> User.age:
+def get_age_in_years(bday: User.birthday, now: Now) -> User.age:
     return now.year - bday.year - ((now.month, now.day) < (bday.month, bday.day))
 ```
 
 Though this is a rather trivial example, lets set some expectations for our feature distribution shifts between snapshots:
 - We expect a User's birthday to never change,
 - We expect a User's full_name to change in a maximum of 0.001% of our users (1/100,000),
-- We expect a User's age to change by a maximum amount of 30 days (in reality, average age will increase by precisely the amount of time between invocations of our snapshot test).
+- We expect a User's age to change by a maximum amount of 2 years (in reality, average age will increase by precisely the amount of time between invocations of our snapshot test).
 
 ## Writing the Test
 
