--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -49,7 +49,7 @@ Though this is a rather trivial example, lets set some expectations for our feat
 ## Writing the Test
 
 First we'll write two fixtures: the first sets up a Chalk Client and the second creates your new snapshot (using
-the previous snapshot to make sure that the exact same ids are being pulled).
+the previous snapshot to make sure that the exact same User ids are being pulled).
 
 ```python
 from chalk.client import ChalkClient
