--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -98,7 +98,7 @@ def test_transaction_aggregations(snaphot_dfs: tuple[pd.DataFrame, pd.DataFrame]
     assert (main_snapshot[User.full_name] != branch_snapshot[User.full_name]).mean() < 0.00001
 
     # Age should not change by more than 30 days
-    assert (main_snapshot[User.age]-branch_snapshot[User.age]).dt.days.abs().max() <= 2
+    assert (main_snapshot[User.age] - branch_snapshot[User.age]).max() <= 2
 ```
 
 ## Writing the GitHub Action
