--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -137,7 +137,7 @@ jobs:
           # Waits for the deployment to succeed (Optional, default false)
           await: true
 
-      - name: Runs the Snaphot Test
+      - name: Runs the Snapshot Test
         run: |
           pytest -s ./tests
 ```
