--- a/snapshot-tests.mdx
+++ b/snapshot-tests.mdx
@@ -26,7 +26,7 @@ import datetime as dt
 @features
 class User:
     id: int
-    full_name: name
+    full_name: str
     birthday: dt.datetime
     age: int
 ```
